x overflow fixed

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ head{
 body{
     background-color: #28282B;
     margin: 0%;
+    overflow-x: hidden;
 }
 
 @font-face {
